# code-indexer

./: .gitignore  LICENSE  README.md  pyproject.toml
.factory/: init.sh  services.yaml
.factory/droids/: c4-component.md  c4-container.md  c4-context.md  devops-troubleshooter.md  playwright-test-generator.md  playwright-test-healer.md  playwright-test-planner.md  security-auditor.md  test-automator.md
.factory/hooks/: log-commands.sh
.factory/skills/code-review/: SKILL.md
.factory/skills/pipeline-worker/: SKILL.md
.factory/skills/python-cli-worker/: SKILL.md
docs/: 01-product-brief.md  02-prd.md  03-system-design.md  04-competitive-analysis.md  implementation-plan-code-indexing.md  peer-review-implementation-plan-code-indexing.md  peer-review-tech-spec-code-indexing-v2.md  peer-review-tech-spec-code-indexing.md  tech-spec-code-indexing.md  tickets-code-indexing.md
indexer/: __init__.py  __main__.py  cli.py  db.py  enricher.py  mapper.py  parser.py  query.py  utils.py
indexer/migrations/: 001_initial.sql  002_edge_pk_and_node_type.sql  003_fts5_sync_triggers.sql  004_directory_summaries.sql  005_fts5_add_columns.sql
indexer/parsers/: __init__.py  base.py  java_parser.py  kotlin_parser.py  python_parser.py  ruby_parser.py  typescript_parser.py
tests/: conftest.py  test_build.py  test_cli_smoke.py  test_db.py  test_enricher.py  test_error_recovery.py  test_install.py  test_integration.py  test_mapper.py  test_parser.py  test_query.py  test_status_reset.py
tests/fixtures/: Sample.java  Sample.kt  sample.py  sample.rb  sample.ts  syntax_error.py
(+75 files in other folders)
