[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-indexer"
version = "0.1.0"
description = "Hybrid code indexing system with AST parsing, dependency mapping, and LLM enrichment"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "tree-sitter>=0.23",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-ruby>=0.23",
    "anthropic>=0.39",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
index = "indexer.cli:cli"

[tool.setuptools.packages.find]
include = ["indexer*"]
